test/source/carehub/main/default/objects/CareTimeSlot__c/CareTimeSlot__c.object-meta.xml
<CustomObject>
    <label>Care Time Slot</label>
    <nameField>
        <label>Care Time Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Time Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>