test/source/carehub/main/default/objects/CareTimeSlot__c/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <label>Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DayOfWeek</valueSetName>
    </valueSet>
</CustomField>