test/source/carehub/main/default/objects/CareTimeSlot__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>