test/source/carehub/main/default/objects/CareTimeSlot__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>