test/source/carehub/main/default/objects/CareTimeSlot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CareOperatingHoursId__c</columns>
    <columns>DayOfWeek__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>